--- a/_posts/Git_blog/2024-01-03-vivans.md
+++ b/_posts/Git_blog/2024-01-03-vivans.md
@@ -4,12 +4,14 @@ excerpt : "git blog 만드는데 나처럼 몇시간 씩 고생한 사람들을 
 
 date: 2024-01-04 
 categories: 
- - git blog
+ - _posts/git_blog
 tags:
   [Blog]
-
 
 toc: true
 toc_sticky : true
 
 ---
+
+
+
